--- a/statistics.html
+++ b/statistics.html
@@ -67,6 +67,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/jcpjcpbangalore/job/oXWrbfwf'>J.C. Penney India Careers - Analyst - SAS & Statistics</a></h5> 
+<p><span class="badge badge-light">Bangalore Bangalore</span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698313723-principal-analyst-statistical-programming'>Biogen Principal Analyst, Statistical Programming | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-28</p>
@@ -131,7 +135,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Montreal Montreal</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='http://uis.applytojob.com/apply/EWLSFp6glf/Security-Monitoring-Solution-Assessment-And-Implementation'>Security monitoring solution - assessment and implementation - UNESCO Institute for Statistics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://uis.applytojob.com/apply/EWLSFp6glf/Security-Monitoring-Solution-Assessment-And-Implementation'>Security monitoring solution - assessment and implementation - UNESCO Institute for Statistics - Career Page</a></h5> 
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -139,7 +143,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/myovantsciences42/jobs/4492849002'>Job Application for Principal Statistical Programmer at Myovant Sciences</a></h5> 
+<h5><a href='https://boards.greenhouse.io/myovantsciences42/jobs/4492849002'>Job Application for Principal Statistical Programmer at Myovant Sciences</a></h5> 
 <p><span class="badge badge-light">Brisbane</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -193,7 +197,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Springfield, Virginia</span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nshe.wd1.myworkdayjobs.com/en-US/UNR-external/job/University-of-Nevada-Reno---Main-Campus/Assistant-Associate-Professor-Professor-Statistics_R0118623'>Assistant/Associate Professor Statistics</a></h5> 
+<h5><a href='https://nshe.wd1.myworkdayjobs.com/en-US/UNR-external/job/University-of-Nevada-Reno---Main-Campus/Assistant-Associate-Professor-Professor-Statistics_R0118623'>Assistant/Associate Professor Statistics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 8, 2019 ... Applicants must have a PhD degree in mathematics, statistics, bio-statistics, data 
 science, or a related area by the time of appointment. Successful candidates?...</p>
@@ -220,7 +224,7 @@ generate?...</p>
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999697465222-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999697465222-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -259,7 +263,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
-<h5><a href='https://jobs.uic.edu/job-board/job-details?jobID=120384'>Job Details: Tenured/Tenure-Track Faculty - Business Statistics/Analytics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.uic.edu/job-board/job-details?jobID=120384'>Job Details: Tenured/Tenure-Track Faculty - Business Statistics/Analytics</a></h5> 
 <p><span class="badge badge-light">Chicago Rockford  Chicago</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
@@ -425,7 +429,7 @@ Statistician (Health) for Centers for Medicare &amp; Medicaid Services [CMS] in 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=obqM9fwg&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=najQ0MwA'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=obqM9fwg&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=najQ0MwA'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Madrid, Spain</span></p>
 <p>Posted on:: 2019-10-05</p>
 <hr/>
@@ -453,7 +457,7 @@ Statistician (Health) for Centers for Medicare &amp; Medicaid Services [CMS] in 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tfscareers.workable.com/j/EE7AB7F098'>TFS - Jobs: Biostatistician, home or office based (m/w/d) - Apply online</a></h5> 
+<h5><a href='https://tfscareers.workable.com/j/EE7AB7F098'>TFS - Jobs: Biostatistician, home or office based (m/w/d) - Apply online</a></h5> 
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
@@ -465,7 +469,7 @@ Statistician (Health) for Centers for Medicare &amp; Medicaid Services [CMS] in 
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-biostatistician-31243'>Sr Biostatistician - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-biostatistician-31243'>Sr Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America United States  North America United States  North America United States  North America United States</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
@@ -486,10 +490,6 @@ Statistician (Health) for Centers for Medicare &amp; Medicaid Services [CMS] in 
     </a></h5> 
 <p><span class="badge badge-light">Exeter, United Kingdom</span></p>
 <p>Posted on: 2019-10-03</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/premier-research/job/oQzfbfwz'>Premier Research Careers - Biostatistical Programmer</a></h5> 
-<p><span class="badge badge-light">North Carolina</span></p>
-<p>Posted on: 2019-10-02</p>
 <hr/>
 
 
